Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.3.0 RC1
-
Fix Version/s: None
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:Windows 8, Linux
-
Commits:c3baa7c1dc8c29bfe60e8e5c676c606d4f699005 (6.6.2014, stable, 5.3.1?) [after branching scheme change]
Description
Take a text edit control (QPlainTextEdit, QTextEdit in Designer form, do preview), type 2 words. Double click on the first one and drag to select the second one: this does not work in 5.3.0 rc1 while this worked in 5.2.1
Maybe this fix caused a regression:
https://bugreports.qt-project.org/browse/QTBUG-25831
Steps to reproduce:
- In a plain text edit containing > 2 words, double click to select one, do not release mouse after click #2
- drag to select word2
- In Qt < 5.3: word2 is selected, in Qt >= 5.3 not
Attachments
Issue Links
- relates to
-
QTBUG-25831 Event behavior for QEvent::MouseButtonDblClick changed since Qt 4
-
- Closed
-