Fix selection by dragging after double click in QWidgetTextControl.

Remove return in mouseMove depending on variable mousePressed which
is not present in Qt 4. The variable was true in Qt versions
before 5.3 due to an additional mouse press event received before
a double click.

Task-number: QTBUG-39023
Task-number: QTBUG-25831
Change-Id: I57ed9284961195c71df9e9b9d697b1cfbad7c228
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>

cregit: c3baa7c1dc8c29bfe60e8e5c676c606d4f699005 https://github.com/qt/qtbase/commit/c3baa7c1dc8c29bfe60e8e5c676c606d4f699005